[gd_scene load_steps=2 format=2]

[ext_resource path="res://connect.gd" type="Script" id=1]

[node name="Connect" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.10803
margin_bottom = 1.10803
color = Color( 0.356863, 0.356863, 0.356863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="ColorRect"]
margin_left = 850.0
margin_top = 510.0
margin_right = 1250.0
margin_bottom = 570.0
text = "HOST"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LoginButton" type="Button" parent="ColorRect"]
margin_left = 850.0
margin_top = 580.0
margin_right = 1250.0
margin_bottom = 640.0
text = "JOIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="ColorRect"]
margin_left = 850.0
margin_top = 650.0
margin_right = 1250.0
margin_bottom = 710.0
disabled = true
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddressLabel" type="Label" parent="ColorRect"]
margin_left = 25.0
margin_top = 510.0
margin_right = 725.0
margin_bottom = 530.0
text = "ADDRESS (CLIENT ONLY)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ip" type="TextEdit" parent="ColorRect"]
margin_left = 25.0
margin_top = 530.0
margin_right = 725.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortLabel" type="Label" parent="ColorRect"]
margin_left = 25.0
margin_top = 630.0
margin_right = 725.0
margin_bottom = 644.0
text = "PORT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="TextEdit" parent="ColorRect"]
margin_left = 25.0
margin_top = 650.0
margin_right = 725.0
margin_bottom = 710.0

[node name="Label" type="RichTextLabel" parent="ColorRect"]
margin_right = 1265.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HatColor" type="Label" parent="ColorRect"]
margin_left = 290.0
margin_top = 160.0
margin_right = 990.0
margin_bottom = 180.0
text = "HAT COLOR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorLeft" type="Button" parent="ColorRect"]
margin_left = 450.0
margin_top = 200.0
margin_right = 510.0
margin_bottom = 260.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -160.0
margin_right = 30.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRight" type="Button" parent="ColorRect"]
margin_left = 770.0
margin_top = 200.0
margin_right = 830.0
margin_bottom = 260.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="NameLabel" type="Label" parent="ColorRect"]
margin_left = 290.0
margin_top = 290.0
margin_right = 990.0
margin_bottom = 310.0
text = "NAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="TextEdit" parent="ColorRect"]
margin_left = 450.0
margin_top = 320.0
margin_right = 830.0
margin_bottom = 360.0
text = "YOUR NAME"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ColorRect/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="ColorRect/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="ColorRect/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ColorRect/ColorLeft" to="." method="_on_ColorLeft_pressed"]
[connection signal="pressed" from="ColorRect/ColorRight" to="." method="_on_ColorRight_pressed"]
